# pypi-slurm-requests

./: README.md  pyproject.toml
src/slurm_requests/: __init__.py
tests/: test_all.py
