[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurm-requests"
dynamic = ["version"]
description = 'Asynchronous SLURM REST requests with proxy support.'
readme = "README.md"
requires-python = ">=3.13"
license = "CC-BY-SA-4.0"
keywords = [
  "slurm",
  "rest",
]
authors = [
  { name = "Kwasniok", email = "Kwasniok@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "rest-requests>=0.0.1",
]

[project.urls]
Documentation = "https://github.com/Kwasniok/pypi-slurm-requests#readme"
Issues = "https://github.com/Kwasniok/pypi-slurm-requests/issues"
Source = "https://github.com/Kwasniok/pypi-slurm-requests"

[tool.hatch.version]
path = "src/slurm_requests/__about__.py"

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest>=8.4",
  "pytest-asyncio>=1.2",
  "asyncio>=4.0.0",
]